# MarkStudio

./: .gitignore  README.md  index.html  package-lock.json  package.json
.VSCodeCounter/2026-06-20_19-10-25/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
data/: markstudio.db
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  error.rs  lib.rs  main.rs  parser.rs
src-tauri/src/collaboration/: mod.rs  network.rs  ot.rs  session.rs  sync.rs
src-tauri/src/services/: document_service.rs  file_service.rs  image_service.rs  mod.rs  ot_service.rs  settings_service.rs
src/components/: CloseConfirmDialog.vue  CollaborationPanel.vue  CursorOverlay.vue  Editor.vue  FavoriteSelectDialog.vue  Favorites.vue  InputDialog.vue  Outline.vue  Preview.vue  RecentFiles.vue  SettingsPanel.vue  SidebarTabs.vue  SplitPane.vue  TabBar.vue  TabSaveConfirmDialog.vue  Toolbar.vue
src/composables/: useShortcuts.ts  useTheme.ts
src/styles/: themes.css
