[package]
name = "markstudio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "markstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
encoding_rs = "0.8"
regex = "1"
futures-util = "0.3"
# socket2 用于在创建 TCP 监听器时设置 IPV6_V6ONLY=0，
# 实现 IPv4/IPv6 双栈监听；该 crate 已是 tokio 的传递依赖，此处显式声明便于直接调用
socket2 = "0.6"

